# lentz

./: .gitignore  .scalafmt.conf  CMakeLists.txt  CMakePresets.json  README.md  build.sbt
examples/hello/: main.lz
grammar/: lentz.g4
include/lentz/analysis/: Symbols.hpp
include/lentz/ast/: Nodes.hpp
include/lentz/backend/: Emitter.hpp
include/lentz/frontend/: Frontend.hpp
include/lentz/util/: Diagnosis.hpp
scripts/: format-all.sh  gen-grammar.sh
src/: CMakeLists.txt
src/analysis/: Symbols.cpp
src/ast/: Nodes.cpp
src/backend/cpp/: Emitter.cpp
src/cli/: lentzc.cpp
src/main/scala/: ast.scala
src/main/scala/cli/: Main.scala
src/main/scala/parser/: LentzParser.scala
src/runtime/: Runtime.cpp
src/test/scala/parser/: LentzParserSpec.scala
tests/: CMakeLists.txt
tests/unit/: minitest.hpp  test_core.cpp
tests/unit/parser/: helpers.hpp
